Fix word wrap issue on projects overlay

--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -9,6 +9,8 @@ h4 {
 
 h2 {
   font-size: 2.5em;
+  width: 200px;
+  text-align: center;
 }
 
 img {
